--- a/question/index.html
+++ b/question/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Question page</title>
 </head>
 <body>
-  <h1> Should see a pageview </h1>
+  <h1> Question page will send an event and a page view! </h1>
+  
 <script type="text/javascript">
   var _cio = _cio || [];
   (function() {
